--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.2.8",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.4.8",
     "path": "^0.12.7",
     "request": "^2.88.2",
