Adding node mailler functionality

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@ PROCESS_KEY=cz334sZORv6qf01o4RgbkD:APA91bHhE273KHyg4KdLKViyycWRYUN2ANrMWDGebgFNi
 API_KEY=AKIAI4B6XIGWY6OJWNWQ
 API_KEY_SECRET=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
 MONGODB_CLIENT=mongodb+srv://hrcloud:hr@123@cluster0.j3zyj.mongodb.net/test?retryWrites=true&w=majority
+
+SMTP_HOST="mail.smtp2go.com"
+SMTP_SECURE=false
+SMTP_PORT=465
+SMTP_USER="evokepoc@evoketechnologies.com"
+SMTP_PASS="cjF1NHdsaXhodDAw"
